hard-gists/3802732/run.log
=== Docker Run Log for 3802732 ===
Started at: Mi 29. Okt 14:00:32 CET 2025

[2025-10-29 14:00:33] START: Running container for 3802732
[2025-10-29 14:00:33] SUCCESS: Container b5e9185c7cc7df6ee87586fda5207be64d826f92e91bc21a55b786661315c965 started for 3802732
=== Container logs for 3802732 ===
  File "/snippet.py", line 36
    print 'Database connection failed!'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3802732 ===
[2025-10-29 14:00:35] INFO: Container b5e9185c7cc7df6ee87586fda5207be64d826f92e91bc21a55b786661315c965 has stopped
